fix contact section height and spacing

--- a/styles/sass/partials/_mediaquery.scss
+++ b/styles/sass/partials/_mediaquery.scss
@@ -35,10 +35,6 @@
 
 @media (min-width: 1080px) {
 
-  .contact {
-    height: 50vh;
-  }
-
   .contactFlexContainer {
     display: flex;
     flex-direction: row;
