--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -411,6 +411,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
 
 h3 {
   font-size: 1rem;
