--- a/styles/styles.css
+++ b/styles/styles.css
@@ -779,6 +779,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 20px;
 }
 .contact h3 {
   font-size: 1rem;
@@ -937,9 +938,6 @@ footer p {
   }
 }
 @media (min-width: 1080px) {
-  .contact {
-    height: 50vh;
-  }
   .contactFlexContainer {
     display: -webkit-box;
     display: -ms-flexbox;
